test/asm/bad-precision.err
error: Fixed-point precision must be between 1 and 31, not 42
    at bad-precision.asm(1)
Assembly aborted with 1 error!
