test/asm/bad-precision.asm
assert round(3.6, 42) == 4.0
